kubernetes/scheduler.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dask-scheduler
  namespace: dask
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dask-scheduler
    spec:
      serviceAccountName: dask-autoscaler
      automountServiceAccountToken: true
      containers:
        - image: daskdev/dask:latest
          command: ["/bin/bash"]
          args: ["/opt/scheduler/run.sh"]
          imagePullPolicy: Always
          name: dask-scheduler
          ports:
            - containerPort: 8787
            - containerPort: 8786
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: config-volume
              mountPath: /opt/scheduler
      volumes:
        - name: config-volume
          configMap:
            name: scheduler
