kubernetes/worker.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dask-workers
  namespace: dask
spec:
  replicas: 0
  template:
    metadata:
      labels:
        app: dask-workers
    spec:
      containers:
        - image: daskdev/dask:latest
          command: ["sh", "-c"]
          args:
            - dask-worker $DASK_SCHEDULER_SERVICE_HOST:$DASK_SCHEDULER_SERVICE_PORT --nprocs 1 --nthreads 1 --host $POD_IP --name $POD_NAME
          imagePullPolicy: Always
          name: dask-worker
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
